[package]
name = "roons"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32", features = ["base64", "serde"] }
bip39 = "2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
secp256k1 = "0.24"
sha2 = "0.10"
ripemd160 = "0.10"
tokio = { version = "1.0", features = ["full"] }
bip32 = { version = "0.5.1", features = ["bip39", "mnemonic"] }
